# albinoyoda.github.io

./: .gitignore  Armory.hpp  CMakeLists.txt  Character.cpp  Character.hpp  Combat_simulator.cpp  Combat_simulator.hpp  Combat_simulator.tcc  Dockerfile  Enchant.cpp  Enchant.hpp  Item.cpp  Item.hpp  README.md  Stats.cpp  Stats.hpp  clang-format  docker_cmake.ps1  docker_run.ps1  index.html  index.js  main.cpp  main_marrow.cpp  main_optimizer.cpp  main_simulator.cpp  main_stat_weights.cpp  main_web_code.cpp  old_code  package-lock.json  package.json
.github/workflows/: cmake.yml  pipeline.yml
Google_tests/: CMakeLists.txt  test_ap_estimation.cpp  test_item_optimizer.cpp
common/: CMakeLists.txt
common/include/: find_values.hpp  find_values.tcc  string_helpers.hpp  string_helpers.tcc
common/include/common/: find_values.tcc  math.hpp  sim_time.hpp
common/source/: string_helpers.cpp
common/tests/: CMakeLists.txt  test_common.cpp
google_tests/lib/googletest/test/: gtest_xml_outfiles_test.py  gtest_xml_output_unittest.py
interface/: CMakeLists.txt  generated.html  index.html  load_presets.js  parse_items.py  server.js  talents.js
interface/emscripten/: CMakeCache.txt  Makefile  cmake_install.cmake  wow_interface.js  wow_interface.wasm  wow_simulator.js  wow_simulator.wasm  wow_stat_weights.js  wow_stat_weights.wasm  wow_web.js  wow_web.wasm
interface/emscripten/interface/: wow_interface.js  wow_interface.wasm
interface/src/: entry_point.cpp
item_optimizer/: CMakeLists.txt
item_optimizer/include/: Item_optimizer.hpp  item_heuristics.hpp  item_upgrades.hpp
item_optimizer/source/: Item_optimizer.cpp  item_heuristics.cpp  item_upgrades.cpp
item_optimizer/tests/: CMakeLists.txt  item_optimizer_fixture.cpp  item_upgrades_fixture.cpp  test_item_optimizer.cpp  test_item_upgrades.cpp
local_build/: CMakeLists.txt  main_multi_select.cpp  main_web_code.cpp
local_build/source/: main_web_code.cpp
sim_interface/: CMakeLists.txt
sim_interface/include/: sim_input_mult.hpp  sim_interface.hpp  sim_output.hpp  sim_output_mult.hpp
sim_interface/source/: sim_interface.cpp  sim_interface_mult.cpp
simulator/: CMakeLists.txt
simulator/include/: Buff_manager.hpp  Combat_simulator.hpp  Combat_simulator.tcc  Helper_functions.hpp  Helper_functions.tcc  Item_optimizer.hpp  Use_effects.hpp  damage_sources.hpp  weapon_sim.hpp
simulator/include/simulator/: ability_queue_manager.hpp  buff_manager.hpp  combat_simulator.hpp  combat_simulator_config.hpp  combat_simulator_config.tcc  cooldown_manager.hpp  damage_sources.hpp  flurry_manager.hpp  hit_tables.hpp  rage_manager.hpp  slam_manager.hpp  spells.hpp  sweeping_strikes_manager.hpp  time_keeper.hpp  use_effect_schedule.hpp  use_effects.hpp  weapon_sim.hpp
simulator/source/: Combat_simulator.cpp  Helper_functions.cpp  Item_optimizer.cpp  Use_effects.cpp  combat_simulator_config.cpp  cooldown_manager.cpp  damage_sources.cpp  hit_tables.cpp  sim_interface.cpp  sim_interface_mult.cpp  spells.cpp  time_keeper.cpp  use_effects.cpp  use_effects_schedule.cpp  weapon_sim.cpp
simulator/tests/: CMakeLists.txt  simulation_fixture.cpp  test_ap_estimation.cpp  test_hit_tables.cpp  test_item_optimizer.cpp  test_simulator.cpp  test_use_effects.cpp
statistics/: CMakeLists.txt
statistics/include/: BinomialDistribution.hpp  Distribution.h  Distribution.hpp  Statistics.hpp
statistics/include/statistics/: Distribution.hpp  Statistics.hpp  uniform.hpp
statistics/source/: BinomialDistribution.cpp  Distribution.cpp  Statistics.cpp  uniform.cpp
statistics/tests/: CMakeLists.txt  test_distribution.cpp  test_statistics.cpp
website/: CMakeLists.txt  index.html
website/emscripten/website/: wasm_interface.js  wasm_interface.wasm
website/js/: talents.js
website/scripts/: parse_items.py
website/source/: emscripten_bindings.cpp
wow_library/: CMakeLists.txt
wow_library/include/: Armory.hpp  Attributes.hpp  Buff_manager.hpp  Character.hpp  Combat_simulator.hpp  Combat_simulator.tcc  Enchant.hpp  Helper_functions.hpp  Helper_functions.tcc  Hit_effect.hpp  Item.hpp  Item_optimizer.hpp  Item_popularity.hpp  Statistics.hpp  damage_sources.hpp  damage_sources.tcc  sim_input.hpp  sim_input_mult.hpp  sim_interface.hpp  sim_output.hpp  sim_output_mult.hpp  time_keeper.hpp  weapon_sim.hpp
wow_library/source/: Armory.cpp  Attributes.cpp  Character.cpp  Combat_simulator.cpp  Enchant.cpp  Helper_functions.cpp  Item.cpp  Item_optimizer.cpp  Statistics.cpp  Stats.cpp  damage_sources.cpp  sim_interface.cpp  sim_interface_mult.cpp  weapon_sim.cpp
wow_library/tests/: CMakeLists.txt  test_attributes.cpp
